fix vertical alignment of icons in dropdown menus

--- a/common/common.scss
+++ b/common/common.scss
@@ -903,7 +903,7 @@ div.poll .results .option {
       -ms-flex-item-align: start;
           align-self: flex-start;
   font-size: inherit;
-  margin-top: .1875em;
+  margin-top: 0;
 }
 
 .popup-menu {
