--- a/scss/common/_dropdown.scss
+++ b/scss/common/_dropdown.scss
@@ -33,7 +33,7 @@
   .icon {
     align-self: flex-start;
     font-size: inherit;
-    margin-top: .1875em;
+    margin-top: 0;
   }
 }
 
